[package]
name = "lwreg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
bincode = "1.3.3"
byteorder = "1.4"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
h3o = { version = "0" }
hextree = { git = "https://github.com/JayKickliter/hextree", branch = "jsk/add-disk-repr" }

[profile.release]
debug = true
