[package]
name = "lwreg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
bincode = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
geojson = "0"
h3o = {version = "0", features = ["geo"]}
hextree = { git = "https://github.com/JayKickliter/hextree", branch = "jsk/add-disk-repr" }
serde_json = "*"

[profile.release]
debug = true
